--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
    font-family: logo-font;
-   src: url(Norse-Bold.otf);
+   src: url(Assets/Norse-Bold.otf);
 }
 
 :root{
@@ -20,7 +20,7 @@ p ,body{
 
 .left-container{
    flex: 1; 
-   background-image: url('photo.avif');
+   background-image: url('Assets/photo.avif');
 }
 
 .logo{
@@ -45,5 +45,51 @@ p ,body{
 
 .right-container{
    flex: 2;
+   display: flex;
+   flex-direction: column;
+   background-color: #F9FAFB;
 }
+
+.right-container > div{
+   height: 200px;
+   flex-grow: 1;
+}
+
+.intro{
+   font-weight: bold;
+   font-size: 1.3rem;
+   padding: 20px;
+}
+
+
+.form{
+   background-color: white;
+}
+
+form{
+   display: flex;
+   flex-direction: column;
+   gap: 20px;
+   padding: 20px 40px;
+}
+
+.form-row{
+   display: flex;
+   gap: 50px;
+}
+
+.form-row input{
+   border: 1px solid #E5E7EB;
+   border-radius: 3px;
+   height: 30px; 
+}
+
+.form-column{
+   display: flex;
+   flex-direction: column;
+   flex: 1;
+   gap: 5px;
+}
+
+
 
