--- a/style.css
+++ b/style.css
@@ -97,10 +97,11 @@ form{
    gap: 5px;
 }
 
-.form-column input:not(.error){
+.form-column input{
    border: 1px solid #E5E7EB;
    border-radius: 3px;
    height: 30px; 
+   outline: none;
 }
 
 /* .form-column input:focus{
@@ -113,22 +114,15 @@ form{
    border-radius: 3px;
    height: 30px; 
    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-   outline-width: 0;
 }
 
 .error{
-   border: 1px solid red;
+   border: 2px solid red !important;
 }
 
 .success{
-   border: 1px solid green;
+   border: 2px solid green !important;
 }
-
-/* input:invalid{
-   border-color: #900;
-   background-color: #FDD;
-} */
-
 
 .finish{
    padding-left: 40px;
